# mcp_project

./: .env.example  agent.py  agent_final_results.json  calendar_2026_process.csv  emails.json  llm_setting.py  prompt_set.py  pyproject.toml  readme.md  requirements.txt  server.py
